trunk/Archive2/66/c8390ed9746fd9/output
main.cpp:22:1: error: 'zxcgsdfgasdfasdf' does not name a type
 zxcgsdfgasdfasdf
 ^
